--- a/docker/mysql/docker-compose.yaml
+++ b/docker/mysql/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: mysql:8.4.2
     container_name: mysql-master
     # network_mode: host
-    privileged: true
+    # privileged: true
     environment:
       - "MYSQL_ROOT_PASSWORD=123456"
       - "TZ=Asia/Shanghai"
@@ -20,7 +20,7 @@ services:
     image: mysql:8.4.2
     container_name: mysql-slave01
     # network_mode: host
-    privileged: true
+    # privileged: true
     environment:
       - "MYSQL_ROOT_PASSWORD=123456"
       - "TZ=Asia/Shanghai"
@@ -40,7 +40,7 @@ services:
     image: mysql:8.4.2
     container_name: mysql-slave02
     # network_mode: host
-    privileged: true
+    # privileged: true
     environment:
       - "MYSQL_ROOT_PASSWORD=123456"
       - "TZ=Asia/Shanghai"
